; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libvgl/extr_mouse.c_VGLMouseSetStdImage.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libvgl/extr_mouse.c_VGLMouseSetStdImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@VGLDisplay = common dso_local global %struct.TYPE_2__* null, align 8
@VGLMouseLargeAndMask = common dso_local global i32 0, align 4
@VGLMouseLargeOrMask = common dso_local global i32 0, align 4
@VGLMouseSmallAndMask = common dso_local global i32 0, align 4
@VGLMouseSmallOrMask = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VGLMouseSetStdImage() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @VGLDisplay, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 800
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @VGLMouseSetImage(i32* @VGLMouseLargeAndMask, i32* @VGLMouseLargeOrMask)
  br label %9

7:                                                ; preds = %0
  %8 = call i32 @VGLMouseSetImage(i32* @VGLMouseSmallAndMask, i32* @VGLMouseSmallOrMask)
  br label %9

9:                                                ; preds = %7, %5
  ret void
}

declare dso_local i32 @VGLMouseSetImage(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
